--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <title>Document</title>
+  <title>ElleHacks Challenge</title>
 </head>
 <body>
+  <div id="saved-username"></div>
+  <div id="scoreboard" class="scoreboard">ScoreBoard
+    <div id="points">0</div>
+  </div>
   <div id="input-container">
     <div class="alert alert-danger start-name-input" id="name-error" role="alert">
       Please type in a name!
@@ -20,22 +24,26 @@
       <input id="name" type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
     </div>
 
-    <button onClick="getName()" class="start">START</button>
+    <button onClick="handleNameInput()" class="start">START</button>
   </div>
 
 </body>
 <script>
-  const getName = function() {
+  const handleNameInput = function() {
     
     const username = document.getElementById(`name`).value;
-    
+    // if the input name is not defined, toggle error
     if(!username) {
       document.getElementById("name-error").style.visibility = "visible";
       return
+    } else {
+      // toggle error if visible and remove start up window
+      document.getElementById("name-error").style.visibility = "hidden";
+      document.getElementById("input-container").style.display = "none";
     }
-   
-    document.getElementById("name-error").style.visibility = "hidden";
-    document.getElementById("input-container").style.display = "none";
+    // display the input name on screen
+    document.getElementById("saved-username").style.visibility = "visible";
+    document.getElementById('saved-username').innerText = username;
   }
   
 </script>
