completed basic functionality for project

--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="./index.css">
-  <script src="index.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <script src="index.js"></script>
   <title>ElleHacks Challenge</title>
 </head>
 <body>
@@ -29,7 +33,19 @@
         </div>
       </div>
     </div>
-    <div id="reward-list">Rewards</div>
+    <div id="list-of-rewards"><h3>Rewards</h3>
+      <div class="reward">
+        <img class="reward-img" alt="bottle" height="9rem" src="images/bottle.svg">
+        <div>100 pts</div>
+      </div>
+      <div class="reward">
+        <img class="reward-img" alt="tote" height="9rem" src="images/tote.svg">
+        <div>100 pts</div>
+      </div>
+
+    </div>
+    
+    
 
   </div>
   <div id="input-container">
@@ -44,6 +60,7 @@
     </div>
     <button onClick="handleNameInput()" class="start">START</button>
   </div>
+
 
 </body>
 
