completed mvp for project'

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
           <button id="option2" onClick="isCorrect(this.innerHTML)" type="button" class="btn btn-warning"></button>
         </div>
       </div>
+      <video id="video" width="400" height="240" controls style="display: none;">
+        <source src="https://www.youtube.com/watch?v=07d2dXHYb94" type="video/mp4">
+      </video>
+
     </div>
     <div id="list-of-rewards"><h3>Rewards</h3>
       <div class="reward">
@@ -48,6 +52,7 @@
     
 
   </div>
+  
   <div id="input-container">
     <div class="alert alert-danger start-name-input" id="name-error" role="alert">
       Please type in a name!
@@ -61,7 +66,7 @@
     <button onClick="handleNameInput()" class="start">START</button>
   </div>
 
-
+  
 </body>
 
 </html>
